Changelog

0.9.10 - 20th May 2020
======================

* remove adjust_date from check_subscription
* check_subscription_datechange_trigR flip-flops from positive to negative

0.9.9 - 4th May 2020
====================

New

* db$patientsRaw (include HeadOfFamilyID)
* parent_list for those listed as head of family

Change

* increase tolerance of paste2 to unusual Unicode characters

0.9.8 - 29th April 2020
=======================

* dM$contact_maxDate (and $contact_maxDateR reactive version, and also private version)
* list_contact_count includes maxDate (in addition to minDate)
  allows restriction of date of last contact
  e.g. 'has not had contact in past 2 months'

0.9.7 - 25th April 2020
=======================

New

* db$asthmaplan and db$pcehrdocuments
* $list_contact_asthma, $contact_asthma_list and $contact_asthma_listR
* $asthmaplan_obs - list asthma plans
* $list_asthma_details - list asthma patients with vaccination and asthma plan status

Change

* list_fobt, list_cst, list_mammogram
  'include_uptodate' option (default TRUE)
* filter out cancelled and 'reversal' services in $db$servicesRaw
* add PayerCode to $db$servicesRaw

Fix

* incorrect labelling of renal disease indication for influenza vaccination

0.9.6 - 1st April 2020
======================

New

* include_uptodate options for $list_vax, $list_influenza, $list_measlesVax, $list_zostavax

Fix

* correction to $list_influenza and $list_zostavax tag display logic (erroneously showed 'removed from reminder list')

0.9.5 - 30th March 2020
=======================

New

* add intID/intID_Date options to $list_zostavax, $list_influenza, $list_measlesVax, $list_vax

Change

* change from $asplenia_list to $asplenic_list
* adjustable $change_subscription (add adjust_days)

0.9.4 - 15th March 2020
=======================

New

* add $db$vaccines $db$vaccine_disease $db$vaxdiseases (none of them used, yet)

Changes

* change from MariaDB to Airtabler